<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tv_lbl_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/advanced_search_option"
        android:textSize="15sp"
        android:textStyle="bold" />

    <!-- Size Spinner -->

    <TextView
        android:id="@+id/tv_img_size"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_lbl_search"
        android:padding="5dp"
        android:text="@string/image_size" />

    <Spinner
        android:id="@+id/spner_img_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/tv_img_size"
        android:layout_toRightOf="@id/tv_img_size"
        android:entries="@array/array_img_size"
        android:padding="5dp" />

    <!-- Color Spinner -->

    <TextView
        android:id="@+id/tv_img_color"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_img_size"
        android:padding="5dp"
        android:text="@string/color_filter" />

    <Spinner
        android:id="@+id/spner_img_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/tv_img_color"
        android:layout_toRightOf="@id/tv_img_color"
        android:entries="@array/array_img_color"
        android:padding="5dp" />

    <!-- Type Spinner -->

    <TextView
        android:id="@+id/tv_img_type"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_img_color"
        android:padding="5dp"
        android:text="@string/image_type" />

    <Spinner
        android:id="@+id/spner_img_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/tv_img_type"
        android:layout_toRightOf="@id/tv_img_type"
        android:entries="@array/array_img_type"
        android:padding="5dp" />

    <TextView
        android:id="@+id/tv_img_site"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_img_type"
        android:padding="5dp"
        android:text="@string/site_filter" />

    <EditText
        android:id="@+id/et_img_site"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/tv_img_site"
        android:layout_toRightOf="@id/tv_img_site"
        android:hint="@string/enter_site_to_search_from"
        android:padding="5dp" />

    <LinearLayout
        android:id="@+id/btnsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_img_site"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_img_save_cancel"
            style="@style/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:onClick="onClickSaveORCancelSettings"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_img_save_settings"
            style="@style/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:onClick="onClickSaveORCancelSettings"
            android:text="@string/save" />
    </LinearLayout>

</RelativeLayout>