<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >

    <EditText
        android:id="@+id/et_img_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn_img_search"
        android:layout_alignTop="@id/btn_img_search"
        android:layout_toLeftOf="@id/btn_img_search"
        android:background="#2d2d2d"
        android:hint="@string/enter_image_search"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@id/btn_img_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:onClick="onSearchBtnClicked"
        android:text="@string/search"
        style="@style/buttons"/>

    <GridView
        android:id="@+id/gv_display_search_imgs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_img_loadmore"
        android:layout_below="@id/btn_img_search"
        android:numColumns="3" >
    </GridView>

    <Button
        android:id="@+id/btn_img_loadmore"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="onLoadMoreBtnClicked"
        android:text="@string/loadmore" />

</RelativeLayout>